--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,32 @@ mybatis.type-aliases-package=com.nowcoder.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# logger
+# Logger
 logging.level.com.nowcoder.community=debug
-logging.file=
+
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=skywalkereloy51@gmail.com
+spring.mail.password=blmb qzvo glsq owvz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Customize
+community.path.domain=http://localhost:8080
+community.path.upload=/Users/yeelin/Documents/community/upload
+
+# Redis Properties
+spring.data.redis.database=8
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Kafka Properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
+
+# Elasticsearch Properties
+spring.data.elasticsearch.cluster-name=nowcoder
+spring.data.elasticsearch.cluster-node=localhost:9300
