--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,11 @@ spring.kafka.consumer.auto-commit-interval=3000
 # Elasticsearch Properties
 spring.data.elasticsearch.cluster-name=nowcoder
 spring.data.elasticsearch.cluster-node=localhost:9300
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
